DHIS-16705 Convert enrollment analytics sql to use CTE instead of subqueries